--- a/style.css
+++ b/style.css
@@ -295,7 +295,7 @@ h6 {
       left: 50%;
 }
 
-.project {
+/* .project {
       height: 500px;
 }
 
@@ -384,7 +384,7 @@ h6 {
       .project1::after, .project2::after, .project3::after, .project4::after {
             display: none;
       }
-}
+} */
 
 /*--------------- footer section --------------- */
 .collab {
